# mossy

./: .build_number  .buildinfo  .cproject  .gitignore  .mailmap  .project  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile32  Makefile64  Makefile64_PC  Makefile86_PC  README.md  a.out  bochs.cfg  bochs.rc  build.ini  build.py  build_info  build_number  bx_enh_dbg.ini  cmake_install.cmake  doc_warn.txt  env_info  gen_buildinfo.py  kernel  kernel.sym  kernel32  kernel32.sym  kernel64  kernel64.sym  kernel64_PC  kernel86_PC  kernel86_PC.sym  link.ld  linkx64.ld  linkx86.ld  log.txt  make.out  (+8 more)
.build/: AGNOSTIC.py  actions taken  agnostic.db  arch.py  build_cmd.py  build_number  check_file.py  compile_opt.py  find_modules.py  get_arches.py  graph.dot  implementation notes  lib_build_opt.py  main.db  message.py  module.py  overview.txt  reset_cmd.py  start.py  util.py
.build/arches/: agnostic.py  check_source.py  untitled.cpp  (+2 more)
build_files/: build_number
doc/: reference
docs/: Doxyfile  Doxyfile_check  custom.css  nag.txt  nomenclature  style.md  things to do
fonts/: default.mbf  default.xml
gc/: crtix64.asm  crtnx64.asm
iso/: kernel  kernel.sym  kernel64  kernel64.sym  kernel64_PC  kernel64_PC.sym  kernel86_PC
nbproject/: configurations.xml  project.xml
scripts/: run_emulator  run_emulator64
src/: .clang-format  .clang_complete  acpi_os.cpp  begin.cpp  define.h  hhalf.cpp  hhalf.h  link.ld  monitor.cpp  monitor.h  panic.cpp  panic.h
tools/: build_util.py  config_read.py  doccheck.py  gen_build_info.py  make_mbf.py  makedocs.py  symexport.py  test.mbf
(+666 files in other folders)
