CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
FIND_PACKAGE(PYTHON)
project (mossy2)
SET(ARCH x64)
SET(VENDOR IBM)
SET(DEBUG 1)
SET(CROSS_COMPILE_FOLDER $ENV{HOME}/opt/cross/bin)
SET(CROSS_COMPILE_PREFIX x86_64-elf-)
SET(CMAKE_C_COMPILER ${CROSS_COMPILE_FOLDER}/${CROSS_COMPILE_PREFIX}gcc)
SET(CMAKE_CXX_COMPILER ${CROSS_COMPILE_FOLDER}/${CROSS_COMPILE_PREFIX}gcc)
SET(CMAKE_ASM_COMPILER ${CROSS_COMPILE_FOLDER}/${CROSS_COMPILE_PREFIX}as)
SET(WFLAGSON "-Wall -Wextra -Werror=return-type -Wshadow -Wframe-larger-than=16384 -Wdeprecated -Wredundant-decls -pedantic")
SET(WFLAGSOFF "-Wno-sequence-point -Wno-unused-parameter -Wno-sign-compare")
SET(DFLAGS "-DARCH=${ARCH} -DVENDOR=${VENDOR} -DDEBUG=${DEBUG}")
SET(FFLAGS "-fno-omit-frame-pointer -ffreestanding -fno-rtti -fno-exceptions -fno-stack-protector")
SET(MFLAGS "-mcmodel=kernel -mno-red-zone -mno-sse3 -mno-3dnow")
SET(CMAKE_C_FLAGS "-Isrc/stdlib/include -O2 -std=c99 ${DEFLAGS} ${WFLAGSON} ${WFLAGSOFF} ${FFLAGS} ${MFLAGS}")
SET(CMAKE_C_FLAGS "-Isrc/stdlib/include -Isrc/hal -O2 -std=c++11 ${DEFLAGS} ${WFLAGSON} ${WFLAGSOFF} ${FFLAGS} ${MFLAGS}")
SET(LDFLAGS "-Tlinkx64.ld -z max-page-size=0x1000 -ffreestanding -O2 -nostdlib -lgcc ${FFLAGS}")
ENABLE_LANGUAGE(ASM)
FILE(GLOB_RECURSE C_SRCS src/*.c)
FILE(GLOB CPP_SRCS src/*.cpp)
FILE(GLOB S_SRCS src/*.cpp)
ADD_EXECUTABLE(kernel ${C_SRCS} ${CPP_SRCS} ${CPP_SRCS})
SET_TARGET_PROPERTIES(kernel PROPERTIES LINK_FLAGS ${LDFLAGS})